WOOSTIFY-114 #comment update place order css #done

--- a/style.css
+++ b/style.css
@@ -8771,6 +8771,10 @@ footer#colophon {
   font-weight: normal;
 }
 
+.place-order {
+  width: 100%;
+}
+
 #place_order {
   font-weight: 600;
   text-transform: uppercase;
