--- a/assets/css/sass/modules/tiny-slider.scss
+++ b/assets/css/sass/modules/tiny-slider.scss
@@ -203,11 +203,11 @@
 	margin: 0 5px;
 	border-radius: 50%;
 	display: inline-block;
-	background: #fff;
+	background-color: #fafafa;
 	border: 0;
 }
 
 .tns-nav button.tns-nav-active {
 	cursor: default;
-	background: #444;
+	background-color: #444;
 }
