--- a/assets/css/sass/base/layout/header.scss
+++ b/assets/css/sass/base/layout/header.scss
@@ -296,12 +296,14 @@
 .woostify-nav-menu-widget {
 	@media ( min-width: $screen-md ) {
 		.woostify-toggle-nav-menu-button,
-		.arrow-icon {
+		.arrow-icon,
+		.site-search,
+		.woostify-nav-menu-account-action {
 			display: none;
 		}
 	}
 	@media ( max-width: $screen-md - 1 ) {
-		.main-navigation {
+		.woostify-nav-menu-inner {
 			opacity: 0;
 			visibility: hidden;
 		}
