--- a/assets/css/sass/modules/contact-form-7.scss
+++ b/assets/css/sass/modules/contact-form-7.scss
@@ -226,3 +226,44 @@
 		}
 	}
 }
+
+/* Pezshop subscribe form */
+.woostify-pezshop-subsbrice-form {
+	position: relative;
+
+	input{
+		border-radius: 50px;
+		padding: 15px 30px;
+		border: 0;
+		&:not([type="submit"]) {
+			width: 100%;
+			padding: 12px 120px 12px 30px;
+		}
+	}
+	.wrapper-submit {
+		position: absolute;
+		top: 0;
+		right: 0;
+		bottom: 0;
+		min-width: 90px;
+		border-radius: 50px;
+		@extend .flex;
+		&:before {
+			content: "\f1b0";
+			font-family: FontAwesome;
+			color: #ffaf35;
+			font-size: 25px;
+		}
+		input {
+			position: absolute;
+			left: 0;
+			top: 0;
+			right: 0;
+			bottom: 0;
+			font-size: 0;
+			width: 100%;
+			background-color: transparent;
+			border: 0;
+		}
+	}
+}
