--- a/assets/css/sass/woocommerce/cart-sidebar.scss
+++ b/assets/css/sass/woocommerce/cart-sidebar.scss
@@ -128,6 +128,7 @@ $media: 599px;
 	border-radius: 8px;
 	min-width: 18px;
 	pointer-events: none;
+	white-space: nowrap;
 	@extend .inline-flex;
 }
 
