--- a/assets/css/sass/base/layout/blog/blog-list.scss
+++ b/assets/css/sass/base/layout/blog/blog-list.scss
@@ -38,10 +38,13 @@
         img{
             object-fit: cover
         }
-    }
+	}
+
+	.entry-header-item {
+		margin-bottom: 15px;
+	}
 
     .entry-meta{
-    	margin-bottom: 15px;
     	.post-meta-item{
     		margin: 0 5px;
 
@@ -63,10 +66,6 @@
 				display: none;
 			}
 		}
-    }
-
-    .alpha.entry-title{
-        margin-top: 12px;
     }
 
     .entry-content{
