--- a/assets/css/sass/base/layout/blog/layout.scss
+++ b/assets/css/sass/base/layout/blog/layout.scss
@@ -103,6 +103,7 @@ $sidebar_width: percentage( 270 / 1170 );
 			}
 			.entry-image-link {
 				max-width: 300px;
+				min-width: 300px;
 				margin-right: 30px;
 			}
 			.loop-post-inner {
@@ -141,6 +142,7 @@ $sidebar_width: percentage( 270 / 1170 );
 
 			.entry-image-link {
 				max-width: 300px;
+				min-width: 300px;
 				margin-right: 30px;
 			}
 		}
