--- a/style.css
+++ b/style.css
@@ -5837,6 +5837,7 @@ footer#colophon {
 .alpha.entry-title {
   font-size: 24px;
   font-weight: normal;
+  margin-top: 0;
 }
 
 .site-main .post {
@@ -6317,6 +6318,7 @@ footer#colophon {
   }
   .blog-layout-standard .site-main .entry-image-link {
     max-width: 300px;
+    min-width: 300px;
     margin-right: 30px;
   }
   .blog-layout-standard .site-main .loop-post-inner {
@@ -6351,6 +6353,7 @@ footer#colophon {
   }
   .blog-layout-zigzag .site-main .entry-image-link {
     max-width: 300px;
+    min-width: 300px;
     margin-right: 30px;
   }
 }
