--- a/assets/css/sass/woocommerce/woocommerce.scss
+++ b/assets/css/sass/woocommerce/woocommerce.scss
@@ -93,6 +93,9 @@
 	}
 	@media ( max-width: $screen-sm - 1 ) {
 		margin-bottom: 15px;
+		&:last-child {
+			margin-bottom: 40px;
+		}
 	}
 }
 
@@ -107,7 +110,6 @@
 .woostify-sorting{
 	@include flex( flex, space-between, center );
 	flex-wrap: wrap;
-	margin-bottom: 42px;
 
 	@media ( max-width: $screen-sm - 1 ) {
 		justify-content: center;
@@ -129,6 +131,7 @@
 		border: 1px solid #ddd;
 		border-radius: 2px;
 		padding: 5px 15px;
+		margin-bottom: 40px;
 		&:after{
 			content: "\e64b";
 			position: absolute;
@@ -148,7 +151,7 @@
 	}
 
 	.woocommerce-result-count{
-		margin-bottom: 0;
+		margin-bottom: 40px;
 		@media ( max-width: $screen-sm - 1 ) {
 			display: none;
 		}
@@ -189,14 +192,19 @@
 /* flas sale */
 .onsale{
 	position: absolute;
-	left: 10px;
 	top: 10px;
 	pointer-events: none;
-	color: #fff;
-	padding: 0 5px;
+	padding: 5px;
 	font-size: 12px;
 	z-index: 2;
-	line-height: 1.7em;
+	line-height: 1;
+	@extend .flex;
+	&.sale-left {
+		left: 10px;
+	}
+	&.sale-right {
+		right: 10px;
+	}
 }
 
 /* message */
@@ -498,6 +506,12 @@ $icon_size: 40px;
 				.product-loop-action{
 					@include translatey( 0 );
 					opacity: 1;
+				}
+				.product-loop-image-wrapper {
+					.loop-add-to-cart-btn {
+						opacity: 1;
+						visibility: visible;
+					}
 				}
 			}
 			/* Fix issue not showing on IE */
