WOOSTIFY-137 #comment add wishlist section; add style for wishlist page

--- a/assets/css/sass/base/layout/widgets.scss
+++ b/assets/css/sass/base/layout/widgets.scss
@@ -491,6 +491,10 @@
         &[href*="tumblr.com"]:before {
             content: "\e72c";
         }
+
+        &[href*="mailto"]:before {
+            content: "\e75a";
+        }
     }
 }
 
