--- a/assets/css/sass/woocommerce/shop-page.scss
+++ b/assets/css/sass/woocommerce/shop-page.scss
@@ -37,38 +37,33 @@
 	}
 
 	/* Add to cart ( On image ) */
-	.loop-add-to-cart-on-image {
+	.loop-add-to-cart-on-image,
+	.added_to_cart {
 		opacity: 0;
 		visibility: hidden;
 		position: absolute;
 		left: 50%;
-		top: 50%;
+		bottom: 48%;
 		line-height: 1.8em;
-		transform: translate( -50%, -50% );
+		transform: translateX( -50% );
 		white-space: nowrap;
 		&:before {
 			margin-right: 7px;
 		}
+	}
+
+	.loop-add-to-cart-on-image{
 		&.added {
 			display: none;
 		}
-		+ .added_to_cart {
-			opacity: 0;
-			visibility: hidden;
-			position: absolute;
-			left: 50%;
-			top: 50%;
-			line-height: 1.8em;
-			transform: translate( -50%, -50% );
-			white-space: nowrap;
-			border: 0;
-			padding: .35em 1.5em;
-			&:before {
-				font-size: 14px;
-				font-family: $icon;
-				content: "\e60e";
-				margin-right: 7px;
-			}
+	}
+
+	.added_to_cart {
+		&:before {
+			font-size: 14px;
+			font-family: $icon;
+			content: "\e60e";
+			margin-right: 7px;
 		}
 	}
 }
