update sub category display

--- a/assets/css/sass/woocommerce/woocommerce.scss
+++ b/assets/css/sass/woocommerce/woocommerce.scss
@@ -9,6 +9,11 @@ $size: 40px;
 	font-weight: normal;
 }
 
+.woocommerce-loop-category__title {
+	font-size: 18px;
+	text-align: center;
+}
+
 /* woocommerce sidebar mobile */
 .sidebar-mobile-open{
 	overflow: hidden;
