--- a/assets/css/sass/woocommerce/woocommerce.scss
+++ b/assets/css/sass/woocommerce/woocommerce.scss
@@ -1,6 +1,23 @@
 /* Variables */
 $size: 40px;
 
+// Updating...
+.processing {
+	pointer-events: none;
+	position: relative;
+	@extend .circle-loading;
+
+	&:after {
+		content: '';
+		background-color: rgba(255,255,255,0.7);
+		position: absolute;
+		left: 0;
+		right: 0;
+		bottom: 0;
+		top: 0;
+	}
+}
+
 /* woocommerce header title */
 .woocommerce-products-header__title{
 	font-size: 1.7em;
